k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 4
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/wdm-project-template-default: "true"
        app: order-service
    spec:
      containers:
        - args:
            - java
            - -jar
            - /app.jar
          image: boomm61/wdm-order:latest
          imagePullPolicy: Always
          name: order-service
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always

status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: order-service
status:
  loadBalancer: {}
