k8s/payment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-db
  name: payment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/wdm-project-template-default: "true"
        app: payment-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: wdmpayment
            - name: POSTGRES_PASSWORD
              value: ABC
            - name: POSTGRES_USER
              value: postgres
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          name: payment-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: payment-db-claim0
      restartPolicy: Always
      volumes:
        - name: payment-db-claim0
          persistentVolumeClaim:
            claimName: payment-db-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-db
  name: payment-db
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
  selector:
    app: payment-db
status:
  loadBalancer: {}
