k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-service
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/wdm-project-template-default: "true"
        app: payment-service
    spec:
      containers:
        - args:
            - java
            - -jar
            - /app.jar
          image: boomm61/wdm-payment:latest
          imagePullPolicy: IfNotPresent
          name: payment-service
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-service
  name: payment-service
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    app: payment-service
status:
  loadBalancer: {}
