k8s/stock-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: stock-db
  name: stock-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stock-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/wdm-project-template-default: "true"
        io.kompose.service: stock-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: wdmstock
            - name: POSTGRES_PASSWORD
              value: ABC
            - name: POSTGRES_USER
              value: postgres
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          name: stock-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: stock-db-claim0
      restartPolicy: Always
      volumes:
        - name: stock-db-claim0
          persistentVolumeClaim:
            claimName: stock-db-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: stock-db
  name: stock-db
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
  selector:
    io.kompose.service: stock-db
status:
  loadBalancer: {}
