k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: wdm-services.com
      http:
        paths:
          - path: /orders/?(.+)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5000
          - path: /payment/?(.+)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5001
          - path: /stock/?(.+)
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 5002
